Find not show all occurrences in left pane (but highlight them in the document)
When I search some words in the PDF document, evince not show me all finded occurrences in the left pane. Unfortunately, the document on which the problem is reproduced, confidential. It contains more than 1000 pages and because of this problem I cannot be sure that I do not pass something important by search of the text in the document. See the screenshot
Version: 3.18.2-1ubuntu4.3, default from Ubuntu 16.04 distribution.